--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1157,10 +1157,11 @@ textarea {
 
 html {
   position: relative;
-  min-height: 100%; }
+  min-height: 100%;
+  height: 100%; }
 
 body {
-  margin-bottom: 44px; }
+  height: 100%; }
 
 ul, ol {
   list-style: none; }
@@ -1169,7 +1170,14 @@ footer {
   position: absolute;
   height: 44px;
   bottom: 0;
+  width: 100%;
   padding: 0 30px; }
+
+#topContainer {
+  padding: 0 0 100px;
+  position: relative;
+  min-height: 100%;
+  box-sizing: border-box; }
 
 label {
   display: block;
