[style] add landing page video, footer broken

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -81,3 +81,15 @@ form button[type="submit"] {
   height: 30px;
   vertical-align: middle;
 }
+
+#video-background {
+/*  making the video fullscreen  */
+  position: fixed;
+  right: 0; 
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
+  width: auto; 
+  height: auto;
+  z-index: -100;
+}
