--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1219,3 +1219,14 @@ form button[type="submit"] {
   width: 30px;
   height: 30px;
   vertical-align: middle; }
+
+#video-background {
+  /*  making the video fullscreen  */
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100; }
