--- a/public/index.ejs
+++ b/public/index.ejs
@@ -7,6 +7,7 @@
     <title>Motiv</title>
     <link rel='stylesheet' href='/css/main.css'>
     <link rel='stylesheet' href='/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='/css/vertical-timeline.css'>
   </head>
   <body>
     <div id="app"><%-html%></div>
