--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -90,7 +90,18 @@ form button[type="submit"] {
   bottom: 0;
   min-width: 100%; 
   min-height: 100%;
-  width: auto; 
   height: auto;
   z-index: -100;
+}
+
+footer {
+  white-space: nowrap;
+}
+
+.container .embed-responsive-16by9 {
+  padding-bottom: 0px; 
+}
+
+#app {
+  height: 100%;
 }
