--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -106,6 +106,33 @@ footer {
   height: 100%;
 }
 
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+
+.modal-dialog .modal-header {
+  background: #008cba;
+  color: white;
+  font-weight: bold;
+}
+
 .ReactModal__Overlay {
   -webkit-perspective: 600;
   perspective: 600;
