[feat] update timeline to load data dynamically with pagination

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -133,6 +133,11 @@ footer {
   font-weight: bold;
 }
 
+#loadMoreDiv {
+  width: 10%;
+  margin: auto;
+}
+
 .ReactModal__Overlay {
   -webkit-perspective: 600;
   perspective: 600;
