--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1264,6 +1264,10 @@ footer {
   color: white;
   font-weight: bold; }
 
+#loadMoreDiv {
+  width: 10%;
+  margin: auto; }
+
 .ReactModal__Overlay {
   -webkit-perspective: 600;
   perspective: 600;
