--- a/public/index.ejs
+++ b/public/index.ejs
@@ -21,6 +21,7 @@ window.error = function(error) {
     </script>
     <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="//widget.cloudinary.com/global/all.js"></script>  
     <script src='/js/bundle.js'></script>
   </body>
 </html>
