--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1266,8 +1266,12 @@ footer {
   font-weight: bold; }
 
 #loadMoreDiv {
-  width: 10%;
-  margin: auto; }
+  position: absolute;
+  width: 100%;
+  margin-top: 10px; }
+
+#loadMoreDiv img {
+  width: 20%; }
 
 .ReactModal__Overlay {
   -webkit-perspective: 600;
