--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -135,8 +135,13 @@ footer {
 }
 
 #loadMoreDiv {
-  width: 10%;
-  margin: auto;
+  position: absolute;
+  width: 100%;
+  margin-top: 10px;
+}
+
+#loadMoreDiv img {
+  width: 20%;
 }
 
 .ReactModal__Overlay {
