[style] setup file architecture for styles

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,5 +1,5 @@
-@import 'normalize';
-@import 'flexboxgrid';
+@import 'vendors/normalize';
+@import 'vendors/flexboxgrid';
 
 html {
   position: relative;
