--- a/public/index.ejs
+++ b/public/index.ejs
@@ -6,8 +6,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Motiv</title>
     <link rel='stylesheet' href='/css/main.css'>
-    <link rel='stylesheet' href='/css/bootstrap.min.css'>
-    <link rel='stylesheet' href='/css/vertical-timeline.css'>
+    <link rel='stylesheet' href='/css/vendors/bootstrap.min.css'>
+    <link rel='stylesheet' href='/css/vendors/vertical-timeline.css'>
   </head>
   <body>
     <div id="app"><%-html%></div>
