--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,189 +1,14 @@
 @import 'vendors/normalize';
 @import 'vendors/flexboxgrid';
+@import 'layout/body';
+@import 'layout/footer';
+@import 'components/timeline';
+@import 'components/messages';
+@import 'components/videoSplash';
 
-html {
-  position: relative;
-  min-height: 100%;
-  height: 100%
-}
 
-body {
-  // padding-bottom: 44px;
-  height: 100%;
-  text-align: center;
-}
 
-ul, ol {
-  list-style: none;
-}
 
-footer {
-  position: absolute;
-  height: 44px;
-  bottom: 0;
-  width: 100%;
-  padding: 0 30px;
-}
 
-#topContainer {
-  padding: 0 0 100px;
-  position:relative;
-  min-height: 100%;
-  box-sizing: border-box;
-}
 
-label {
-  display: block;
-  line-height: 1.8;
-}
 
-input[type="radio"] + label,
-input[type="checkbox"] + label {
-  display: inline-block;
-  margin: 0 5px;
-}
-
-form button[type="submit"] {
-  margin-top: 1em;
-}
-
-.list-inline {
-  display: inline-block;
-  padding-left: 0;
-  list-style: none;
-}
-
-.list-inline > li {
-  display: inline-block;
-  padding: 0 5px;
-}
-
-.container {
-  padding-right: 2rem;
-  padding-left: 2rem;
-}
-
-.text-success {
-  color: #29b35b;
-}
-
-.text-danger {
-  color: #b61b17;
-}
-
-.text-info {
-  color: #31708f;
-}
-
-.avatar {
-  margin-right: 5px;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  vertical-align: middle;
-}
-
-#video-background {
-/*  making the video fullscreen  */
-  position: fixed;
-  right: 0; 
-  bottom: 0;
-  min-width: 100%; 
-  min-height: 100%;
-  height: auto;
-  width: auto;
-  z-index: -100;
-}
-
-footer {
-  white-space: nowrap;
-}
-
-.container .embed-responsive-16by9 {
-  padding-bottom: 0px; 
-}
-
-#app {
-  height: 100%;
-}
-
-.btn-file {
-    position: relative;
-    overflow: hidden;
-}
-
-.btn-file input[type=file] {
-    position: absolute;
-    top: 0;
-    right: 0;
-    min-width: 100%;
-    min-height: 100%;
-    font-size: 100px;
-    text-align: right;
-    filter: alpha(opacity=0);
-    opacity: 0;
-    outline: none;
-    background: white;
-    cursor: inherit;
-    display: block;
-}
-
-.modal-dialog .modal-header {
-  background: #008cba;
-  color: white;
-  font-weight: bold;
-}
-
-#loadMoreDiv {
-  position: absolute;
-  width: 100%;
-  margin-top: 10px;
-}
-
-#loadMoreDiv img {
-  width: 20%;
-}
-
-.ReactModal__Overlay {
-  -webkit-perspective: 600;
-  perspective: 600;
-  opacity: 0;
-  overflow-x: hidden;
-  overflow-y: auto;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.ReactModal__Overlay--after-open {
-  opacity: 1;
-  transition: opacity 150ms ease-out;
-}
-
-.ReactModal__Content {
-  -webkit-transform: scale(0.5) rotateX(-30deg);
-  transform: scale(0.5) rotateX(-30deg);
-}
-
-.ReactModal__Content--after-open {
-  -webkit-transform: scale(1) rotateX(0deg);
-  transform: scale(1) rotateX(0deg);
-  transition: all 150ms ease-in;
-}
-
-.ReactModal__Overlay--before-close {
-  opacity: 0;
-}
-
-.ReactModal__Content--before-close {
-  -webkit-transform: scale(0.5) rotateX(30deg);
-  transform: scale(0.5) rotateX(30deg);
-  transition: all 150ms ease-in;
-}
-
-.ReactModal__Content.modal-dialog {
-  border: none;
-  background-color: transparent;
-}
-
-.container-infinite {
-  width: 100px;
-}
