--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -2,6 +2,7 @@
 @import 'vendors/flexboxgrid';
 @import 'layout/body';
 @import 'layout/footer';
+@import 'components/profile';
 @import 'components/timeline';
 @import 'components/messages';
 @import 'components/videoSplash';
