--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1220,7 +1220,8 @@ footer {
   text-align: left; }
 
 .profile-img {
-  width: 100%; }
+  width: 100%;
+  box-shadow: 4px 3px 1px #d7e4ed; }
 
 .btn-file {
   position: relative;
