--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1162,7 +1162,8 @@ html {
 
 body {
   height: 100%;
-  text-align: center; }
+  text-align: center;
+  background-color: #e9f0f5 !important; }
 
 ul, ol {
   list-style: none; }
@@ -1216,12 +1217,68 @@ footer {
   padding: 0 30px;
   white-space: nowrap; }
 
+.bio-row div {
+  margin: auto; }
+
 .bio-div {
   text-align: left; }
 
 .profile-img {
-  width: 100%;
+  position: absolute;
+  float: left;
+  bottom: 3em;
+  left: 3em;
+  max-height: 200px;
   box-shadow: 4px 3px 1px #d7e4ed; }
+
+@media screen and (max-width: 480px) {
+  .profile-img {
+    max-height: 120px;
+    bottom: 3em;
+    left: 2em; } }
+
+.bio-div-parent {
+  padding-top: 0 !important;
+  background-color: white; }
+
+.bio-div div {
+  margin-left: 15%; }
+
+.bio-div h3 {
+  padding-top: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px; }
+
+@media screen and (max-width: 480px) {
+  .bio-div div {
+    margin-left: 40%; } }
+
+.header-img {
+  width: 100%;
+  max-height: 200px;
+  object-fit: cover; }
+
+.profile-contents-row .col-md-10 {
+  margin: auto; }
+
+.profile-follow-div button {
+  position: absolute;
+  right: 0; }
+
+.goals-regime-supplements-div {
+  padding-left: 0 !important;
+  padding-right: 0 !important; }
+
+.feed-and-timeline-div {
+  margin-top: 10px !important;
+  padding-right: 0 !important; }
+
+@media screen and (max-width: 480px) {
+  .feed-and-timeline-div {
+    padding-left: 0 !important; } }
+
+.profile-contents-row .card {
+  background-color: white; }
 
 .btn-file {
   position: relative;
@@ -1313,3 +1370,64 @@ footer {
 
 .container-infinite {
   width: 100px; }
+
+.card {
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12); }
+
+.card {
+  margin-top: 10px;
+  box-sizing: border-box;
+  border-radius: 2px;
+  background-clip: padding-box; }
+
+.card span.card-title {
+  color: #fff;
+  font-size: 24px;
+  font-weight: 300;
+  text-transform: uppercase; }
+
+.card .card-image {
+  position: relative;
+  overflow: hidden; }
+
+.card .card-image img {
+  border-radius: 2px 2px 0 0;
+  background-clip: padding-box;
+  position: relative;
+  z-index: -1; }
+
+.card .card-image span.card-title {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 16px; }
+
+.card .card-content {
+  padding: 16px;
+  border-radius: 0 0 2px 2px;
+  background-clip: padding-box;
+  box-sizing: border-box; }
+
+.card .card-content p {
+  margin: 0;
+  color: inherit; }
+
+.card .card-content span.card-title {
+  line-height: 48px; }
+
+.card .card-action {
+  border-top: 1px solid rgba(160, 160, 160, 0.2);
+  padding: 16px; }
+
+.card .card-action a {
+  color: #ffab40;
+  margin-right: 16px;
+  transition: color 0.3s ease;
+  text-transform: uppercase; }
+
+.card .card-action a:hover {
+  color: #ffd8a6;
+  text-decoration: none; }
+
+.card hr {
+  margin-top: 0 !important; }
