--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -6,7 +6,7 @@
 @import 'components/timeline';
 @import 'components/messages';
 @import 'components/videoSplash';
-
+@import 'components/card'
 
 
 
