--- a/public/css/components/profile.scss
+++ b/public/css/components/profile.scss
@@ -78,3 +78,11 @@
 .profile-contents-row .card {
   background-color: white;
 }
+
+.card .profile-card-header h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 8px;
+}
