--- a/public/index.ejs
+++ b/public/index.ejs
@@ -7,6 +7,7 @@
     <title>Motiv</title>
     <link rel='stylesheet' href='/css/main.css'>
     <link rel='stylesheet' href='/css/vendors/bootstrap.min.css'>
+    <link rel='stylesheet' href='/css/vendors/font-awesome.min.css'>
     <link rel='stylesheet' href='/css/vendors/vertical-timeline.css'>
   </head>
   <body>
