[feat] implement feeds and style feeds

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2355,3 +2355,10 @@ footer {
   width: 75%;
   margin: auto;
   margin-bottom: 5px; }
+
+.inf-load-loader {
+  width: 10%; }
+
+.right-corner-time {
+  position: absolute;
+  right: 1em; }
