--- a/public/css/layout/body.scss
+++ b/public/css/layout/body.scss
@@ -1,13 +1,14 @@
 html {
   position: relative;
   min-height: 100%;
-  height: 100%
+  height: 100%;
 }
 
 body {
   // padding-bottom: 44px;
   text-align: center;
   background-color: #e9f0f5 !important;
+  height: 100%;
 }
 
 ul, ol {
@@ -15,7 +16,7 @@ ul, ol {
 }
 
 #topContainer {
-  padding: 0 0 100px;
+  padding: 0;
   position:relative;
   min-height: 100%;
   height: 100%;
