--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -6,11 +6,12 @@
 @import 'components/profile';
 @import 'components/timeline';
 @import 'components/messages';
-@import 'components/videoSplash';
+@import 'components/splash';
 @import 'components/card';
 @import 'components/login';
 @import 'components/settings';
 @import 'components/feed';
+@import 'components/parallax-video';
 
 
 
