--- a/public/css/components/splash.scss
+++ b/public/css/components/splash.scss
@@ -3,6 +3,11 @@
   width: 100%;
 }
 
+.parallax-row img {
+  min-height: 100%;
+  min-width: 100%;
+}
+
 .parallax-row .react-parallax-content {
   position: absolute;
   top: 50%;
