--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2303,6 +2303,10 @@ footer {
   height: 100vh;
   width: 100%; }
 
+.parallax-row img {
+  min-height: 100%;
+  min-width: 100%; }
+
 .parallax-row .react-parallax-content {
   position: absolute;
   top: 50%;
